<resources>
    <string name="app_name">Amblyo Mobile</string>
    <string name="salir">Exit</string>
    <string name="opciones">Options</string>
    <string name="sesi_n">Session</string>
    <string name="jugar">Play</string>
    <string name="configuraci_n">Configuración</string>
    <string name="reglas">Rules</string>
    <string name="title_activity_settings">Settings</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="ojo_izquierdo">Left eye</string>
    <string name="ojo_derecho">Right eye</string>
    <string name="ojo_vago">Lazy eye</string>
    <string name="color_de_fondo">Background color</string>
    <string name="activar_sonido">Sound active</string>
    <string name="velocidad">Speed</string>
    <string name="autoincrementar_velocidad">Autoincrement speed</string>
    <string name="muros">Walls</string>
    <string name="snake">Snake</string>
    <string name="snakeR">Snake is a game where you must eat as many apples as possible. The snake increases in length with each apple that it eats, which increases the difficulty. The higher the speed, the higher the score. Choose the speed in the configuration menu. You can increase speed as time goes by if you activate the auto-speed in the configuration menu. You can play with walls (more difficult but more score) or without walls. You can activate or deactivate the walls in the configuration menu. The snake dies when it hits the wall or with itself. Move the snake by sliding your fingers across the screen in the direction you want: up, down, right or left.</string>
    <string name="tetris">Tetris</string>
    <string name="tetrisR">Get points by fitting the geometric figures that fall on the board so that you can completely fill a row of the board. Then a line will be emptied and you will get points. You can empty several lines simultaneously, which will give you more points. When you fit a figure, another figure will automatically appear at the top of the board. The game ends when the board overflows, that is, you have consumed all the rows. The higher the level, the higher the speed and the higher the score. Choose the level in the configuration menu. You can increase the level as you fill in rows if you activate the auto-speed in the configuration menu. Move the figure by sliding your fingers across the screen either to the right or to the left. Swipe up or press the screen to rotate the figure. Slide down to accelerate the fall (when you\'re sure where you want to place it).</string>
    <string name="flappy">Flappy</string>
    <string name="flappyR">Try to survive as long as possible by crossing the colored ball through the obstacles, without hitting or leaving the screen. The ball will move more and more quickly. The ball will descend automatically by gravity. You must jump to raise the ball. Press the screen to jump.</string>
    <string name="volver_atr_s">Get back to the game menu</string>
    <string name="mejores_puntuaciones">Top scores</string>
    <string name="time">Time:</string>
    <string name="level">Level:</string>
    <string name="score">Score:</string>
    <string name="mi_historial">Mi history</string>
    <string name="nivel">Level</string>
    <string name="volver_al_men">Get back to the main menu</string>
    <string name="guardar_cambios">Save changes</string>
    <string name="volver_atr_as">Get back</string>
    <string name="username">Username</string>
    <string name="iniciar_sesi_n">Login</string>
    <string name="update">Update</string>
    <string name="mi_cuenta">Mi account</string>
    <string name="mi_cuenta_google">Google account</string>
    <string name="code_breaker">Code Breaker</string>
    <string name="breaker">Breaker</string>
    <string name="amblyopia">Amblyopia</string>
    <string name="mobile">MOBILE</string>
    <string name="games"><u>GAMES</u></string>
    <string name="comprar_gafas">Buy glasses</string>
    <string name="www_amblyopiaonlinegames_com">www.amblyopiaonlinegames.com</string>
    <string name="m_s_informaci_n_en">Más información en:</string>
    <string name="breakeR">We have to break all the blocks of the panel with the ball, which we must hit with the mobile platform. You can move the platform to the right or to the left, keeping pressing the corresponding side of the screen. The ball is in continuous movement. When hitting the mobile platform or with a block, the ball bounces. When hit with a block, it disappears and we earn points. When all the blocks disappear, we rise in level and gain a life. The higher the level, the higher the score and the faster the ball. Each time the ball bounces on the bottom of the panel, we lose a life. When we lose all lives, the game ends. You can configure the initial level in the configuration menu.</string>
    <string name="resultados_">results)</string>
    <string name="nombre">Name: </string>
    <string name="juego">Game</string>
    <string name="fecha">Day</string>
    <string name="puntuacion">Score</string>
    <string name="comidos_">eaten:</string>
    <string name="lineas_">Lines:</string>
    <string name="saltos_">Jumps:</string>
    <string name="levels_">Levels:</string>
    <string name="tiempo">Time</string>
    <string name="nivel_">Level:</string>
    <string name="score_">Score:</string>
    <string name="time_">Time:</string>
    <string name="LEVEL_">LEVEL:</string>
    <string name="menu_pausa">Pause Menu</string>
    <string name="quieres_salir">Do you want to leave the game?</string>
    <string name="reanudar">Resume</string>
    <string name="seguro">¿Are you sure?</string>
    <string name="no_se_guarda">The game will not be saved</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="velocidad_">Speed:</string>
    <string name="level_">Level:</string>
    <string name="_score">Score:</string>
    <string name="lives_">Lives:</string>
    <string name="lose">You lose! Your score was: </string>
    <string name="has_comido">You have eaten </string>
    <string name="manzanas"> apples</string>
    <string name="cargando">Loading...</string>
    <string name="email_username">Email/Username</string>
    <string name="pais">Country: </string>
    <string name="genero">Gender: </string>
    <string name="fechaNacimiento">Birthdate: </string>
    <string name="mi_actividad">My Activity</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="amblyo">AMBLYO</string>
    <string name="camposactualizados">updated fields</string>
    <string name="necesitasemail">You need an email account</string>
    <string name="bienvenido">Welcome</string>
    <string name="total">Total time: </string>
    <string name="medio">Average daily time: </string>
    <string name="jugados">Games played: </string>
    <string name="enjoy">Enjoying Amblyopia Mobile Games?</string>
    <string name="si_">Yes!</string>
    <string name="no_">Not really</string>
    <string name="howabout">How about a rating on the App Store, then?</string>
    <string name="si__">Ok, sure</string>
    <string name="no__">No, thanks</string>
    <string name="givingus">Would you mind giving us some feedback?</string>
    <string name="cuenta">Account: </string>
    <string name="about">About</string>
    <string name="instrucciones">Instructions for use</string>
    <string name="Cuenta">Account</string>
    <string name="a_faq0">What is lazy eye or amblyopia?</string>
    <string name="a_faq1">Treatment</string>
    <string name="a_faq2">Filter the image with the correct colors</string>
    <string name="a_faq3">What happens if I suffer strabismus?</string>
    <string name="a_faq4">Are games also beneficial for adults?</string>
    <string name="a_faq5">Is it backed by a medical authority?</string>
    <string name="a_faq6">Are the games aimed at minors?</string>
    <string name="a_ans0">The vague eye or amblyopia is the most frequent reason for vision loss among children and young people in developed countries and affects approximately 3\% of the population. It happens as a result of inadequate brain processing, because one of the eyes does not communicate well with the brain (it can be due to multiple causes such as strabismus, graduation differences between both eyes, anisometropia, aniseiconía, congenital cataracts) not reaching the optimal visual acuity, nor using the best optical correction. Which causes the weaker eye to be suppressed by the stronger eye. People with lazy eye do not have a developed percepcle of depth. It is very important to correct this visual defect during childhood (before 7 or 8 years), because if it is passed, the patient can completely lose the vision of the eye that does not use.</string>
    <string name="a_ans1">The treatment for amblyopia is to force the lazy eye to use. The most popular is for the child to wear the \'good\' eye patch for several hours every day for a few weeks or months. Once childhood is over, there is nothing to do for lack of cerebral plasticity.\nHowever, it has been found that play is effective in the treatment of amblyopia in adults, also known as \'lazy eye \', of According to new research.\nGaming information is shared by both eyes, forcing them to cooperate.\nWhen both eyes cooperate, the amblyopic brain can relearn as a result of an increase in the level of plasticity in the brain. Patients who played with both eyes experienced a significant improvement in their vision of the weaker eye after only two weeks.</string>
    <string name="a_ans2">These games can help you. With the right settings, applications can force the brain to use both eyes simultaneously to teach the brain proper image processing. Each part of the image is filtered only by one of the two eyes and this is achieved by filtering colors by putting on anaglyph glasses. Always make sure that only one of the eyes can see the left or right color. game requires that information be sent to both eyes to work cooperatively.</string>
    <string name="a_ans3">If you suffer from strabismus then you can NOT use this treatment because you may develop a double vision problem (diplopia). However, anyone can play games without anaglyph glasses simply for fun. You will find all the information in the "terms and conditions".</string>
    <string name="a_ans4">Yes, it has been discovered that these games are an effective exercise even for adults because they are based on teamwork of the eyes and force both of them to work together. In fact it is designed for adults suffering from amblyopia. Because traditional medicine only makes an early treatment until age 8 with the use of the patch, and after that age is considered impossible or very complicated. This is an alternative method for curing amblyopia for adults who feel encouraged to experiment with it.</string>
    <string name="a_ans5">It\'s not. It is an alternative therapy that is not supported by a professional but offers good results. First of all you must go to a professional and follow their instructions, we do not substitute the work of anyone. All this is stipulated in the \"terms and conditions\".</string>
    <string name="a_ans6">Yes of course. The games are suitable for all audiences in terms of gameplay and content. If you are a minor you must be under the supervision of an adult. All this is stipulated in the "terms and conditions".</string>
    <string name="b_faq0">Where do I begin?</string>
    <string name="b_faq1">What kind of 3d glasses can I use to play?</string>
    <string name="amblyomobile" translatable="false">AmblyoMobile</string>
    <string name="admobbannercodesuperior"  translatable="false">ca-app-pub-7795021054645145/8900234322</string>
    <string name="admobbannercodeinferior"  translatable="false">ca-app-pub-7795021054645145/6246150821</string>
</resources>