<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".juegos.tetris.game.TetrisGame">

    <LinearLayout
        android:id="@+id/LayoutBannerSuperior"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bannerHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
        <com.google.android.gms.ads.AdView
            android:id="@+id/bannerSuperior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/admobbannercodesuperior"
            />

    </LinearLayout>
    <View
        android:id="@+id/lineSuperior"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightLineBanner"
        android:background="@color/colorlinebanner"
        app:layout_constraintTop_toBottomOf="@+id/LayoutBannerSuperior"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/LayoutBannerSuperior"
        app:layout_constraintBottom_toTopOf="@+id/LayoutBannerInferior">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/LayoutBannerSuperior">

            <TextView
                android:id="@+id/ScoreView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score" />

            <TextView
                android:id="@+id/LevelView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/level" />

            <TextView
                android:id="@+id/TimeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time" />

        </LinearLayout>


        <soft.evm.amblyopiamobilegames.juegos.tetris.game.TETRISView
            android:id="@+id/TetrisView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />

    </LinearLayout>

    <View
        android:id="@+id/lineInferior"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightLineBanner"
        android:background="@color/colorlinebanner"
        app:layout_constraintBottom_toTopOf="@+id/LayoutBannerInferior"
        android:layout_marginTop="@dimen/marginLineBanner"
        />
    <LinearLayout
        android:id="@+id/LayoutBannerInferior"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bannerHeight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <com.google.android.gms.ads.AdView
            android:id="@+id/bannerInferior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/admobbannercodeinferior"
            android:layout_marginTop="@dimen/marginLineBanner"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
